--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -29,7 +29,7 @@
 	"testimonial.n1" : "It solves our logistical problems and gives a better image to our business. I increase the income of new customers and current customers are more happy.",
 	"testimonial.n2" : "The relationship is stronger than the contract. Calden is aligned with our goals in a way that doesn’t keep me up at night thinking about the letter of the SOW. They have shown they value our business and are invested in our success.",
 	"testimonial.n3" : "The team has surpassed our expectations in almost every way. Our squad is smart, inquisitive, endlessly positive, and always seeking to improve. We’ve started to accomplish great things together, and our approach to CI/CD and data-centric feature development keeps us confident that we’re quickly delivering experiences to our user base that are both high quality and actually useful.",
-	"cta.text" : "For previewing layouts and visual?",
+	"cta.text" : "To get more information, write us!",
 	"footer.contact" : "Contact",
 	"footer.aboutus" : "About us",
 	"footer.faq" : "FAQ's",
