--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -29,7 +29,7 @@
 	"testimonial.n1" : "Resuelve nuestros problemas logísticos y le da una mejor imagen a nuestro negocio. Aumento los ingresos de nuevos clientes y los clientes actuales están más contentos.",
 	"testimonial.n2" : "La relación es más fuerte que el contrato. Calden está alineado con nuestros objetivos de una manera que no me mantiene despierto por la noche pensando en la letra de la SOW. Han demostrado que valoran nuestro negocio y están invertidos en nuestro éxito.",
 	"testimonial.n3" : "El equipo ha superado nuestras expectativas en casi todos los sentidos. Nuestro equipo es inteligente, inquisitivo, infinitamente positivo y siempre busca mejorar. Hemos comenzado a lograr grandes cosas juntos, y nuestro enfoque para CI / CD y el desarrollo de funciones centradas en datos nos mantiene seguros de que estamos entregando rápidamente experiencias a nuestra base de usuarios que son de alta calidad y realmente útiles.",
-	"cta.text" : "Para mayor informacion , escribanos!!",
+	"cta.text" : "Pide el mejor presupuesto que se adapte a tus preferencias",
 	"footer.contact" : "Contacto",
 	"footer.aboutus" : "Sobre Nosotros",
 	"footer.faq" : "FAQ's",
